# sonyfsfn

./: AUTHORS  ChangeLog  Makefile.in  NEWS  README.in  THANKS  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.3
data/: Makefile.am  Makefile.in  fsfn  fsfn.gentoo  fsfn.in
debian/: README.Debian  changelog  control  copyright  cron.d.ex  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  init.d.lsb.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst  postinst.ex  postrm.ex  preinst  preinst.ex  prerm  prerm.ex  rules  sonyfsfn-default.ex  sonyfsfn.doc-base.EX  sonyfsfn.substvars  watch.ex
doc/: Makefile.in
m4/: Makefile.in
po/: ChangeLog  POTFILES  POTFILES.in  de.gmo  de.po  messages.pot  sonyfsfn.pot  synaptics-multimedia-pad.pot
src/: Makefile.am  Makefile.in  client.c  define.h  fsfn_brightness.c  fsfn_brightness.h  fsfn_daemon.c  fsfn_sound.c  fsfn_sound.h  inotice.c  inotice.h  osd.c  osd.h
